--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -846,7 +846,7 @@ Dado $(X,Y)$ y un clasificador $f_\theta \ t.q. \ \theta \in \Theta$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Atributos en los datos}
-	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la mobilidad endémica de este usuario
+	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la movilidad endémica de este usuario
 
 	\bigskip
 
@@ -858,7 +858,7 @@ Dado $(X,Y)$ y un clasificador $f_\theta \ t.q. \ \theta \in \Theta$
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Atributos en los datos 2}
-	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la mobilidad endémica de este usuario
+	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la movilidad endémica de este usuario
 
 	\bigskip
 
@@ -1016,7 +1016,7 @@ Un ejemplo de dos atributos de $X$ procesdos a partir del grafo de comunicacione
 	Los tres tipos de atributos más relevantes para la clasificaición de los migrantes estaban relacionadas con:
 
 	\begin{enumerate*}[label={\alph*)},]
-		\item la mobilidad del usuario
+		\item la movilidad del usuario
 		\item las interacciones y patrones de llamados con vecinos vulnerables, y
 		\item uso celular en los meses más cercanos a $T_0$, así como también la actividad en el mes de Diciembre.
 	\end{enumerate*}
@@ -1034,7 +1034,7 @@ Un ejemplo de dos atributos de $X$ procesdos a partir del grafo de comunicacione
 			%La caracterizaci\'on actual de la vulnerabilidad viene dada por contacto telefónicos con usuarios de antenas del Gran Chaco.
 			\item Concentración geoespacial de usuarios
 
-			\item Mobilidad no implica prevalencia
+			\item Movilidad no implica prevalencia
 
 			\item Estacionalidades en las migraciones
 
