--- a/ch_results.tex
+++ b/ch_results.tex
@@ -340,7 +340,7 @@ The table shows the best-fit classifier's performance across three scores on the
 %     Logistic Classifier   & (0.893,0.857,0.9)  & (0.71,0.72,0.248)  &  (0.705,0.754,0.307)   & (0.883,0.85,0.331)   \\
 %     Random Forest   & (0.878,0.857,0.9)  & (0.79,0.776,0.278)  &  (0.792,0.845,0.346)   & (0.898,0.853,0.393)   \\
 %     Gradient Boosting   & (0.974,0.978,0.952)  & (0.838,0.819,0.291)  &  (0.811,0.855,0.359)   & (0.885,0.873,0.384)   \\
-% %$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+% %$Naive \ Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
 % %$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
 % %$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
 % %$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
@@ -352,7 +352,7 @@ The table shows the best-fit classifier's performance across three scores on the
 
 %\begin{landscape}% Landscape page
 			% RAW NON TABLE SYNTHAXED VALUES
-%			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+%			$Naive \ Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
 			% $Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
 			% $Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  && 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
 			% $Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
@@ -368,10 +368,10 @@ The table shows the best-fit classifier's performance across three scores on the
 			&  \multicolumn{4}{c}{Problem 1} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  \\
 			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96\\
 			$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 \\
 			$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41  \\
+			$Naive \ Bayes$               & 0.84  & 0.82  & 0.75  & 2  \\
 
 			\bottomrule
 		\end{tabular}
@@ -386,10 +386,10 @@ The table shows the best-fit classifier's performance across three scores on the
 			&  \multicolumn{4}{c}{Problem 2} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Naive Bayes$               & 0.64  & 0.61  & 0.31  & 2   \\
 			$Logistic \ Regression$     & 0.714 & 0.726 & 0.248 & 119 \\
 			$Random \ Forest$            & 0.79  & 0.776 & 0.278 & 45  \\
 			$Gradient \ Tree \ Boosting$ & 0.838 & 0.819 & 0.291 & 54 \\
+			$Naive \ Bayes$               & 0.64  & 0.61  & 0.31  & 2   \\
 
 			\bottomrule
 		\end{tabular}
@@ -403,10 +403,10 @@ The table shows the best-fit classifier's performance across three scores on the
 			&  \multicolumn{4}{c}{Problem 3} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Naive Bayes$               & 0.65  & 0.63  & 0.45  & 1  \\
 			$Logistic \ Regression$     & 0.705 & 0.754 & 0.307 & 115 \\
 			$Random \ Forest$            &  0.792 & 0.845 & 0.346 & 21 \\
 			$Gradient \ Tree \ Boosting$ & 0.811 & 0.855 & 0.359 & 33 \\
+			$Naive \ Bayes$               & 0.65  & 0.63  & 0.45  & 1  \\
 
 			\bottomrule
 		\end{tabular}
@@ -418,10 +418,10 @@ The table shows the best-fit classifier's performance across three scores on the
 			&  \multicolumn{4}{c}{Problem 4} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-			$Naive Bayes$               & 0.85  & 0.76  & 0.62 & 1 \\
 			$Logistic \ Regression$     & 0.883 & 0.85  & 0.331 & 106 \\
 			$Random \ Forest$            & 0.898 & 0.853 & 0.393 & 19 \\
 			$Gradient \ Tree \ Boosting$ & 0.885 & 0.873 & 0.384 & 47 \\
+			$Naive \ Bayes$               & 0.85  & 0.76  & 0.62 & 1 \\
 
 			\bottomrule
 		\end{tabular}
@@ -438,7 +438,7 @@ The table shows the best-fit classifier's performance across three scores on the
 %&  \multicolumn{4}{c}{Problem 3} &  \phantom{abc} & \multicolumn{4}{c}{Problem 4} \\
 %\cmidrule{2-5} \cmidrule{7-10} %\cmidrule{10-12}
 %& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime (m)$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
-%$Naive Bayes$                & 0.65  & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
+%$Naive \ Bayes$                & 0.65  & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
 %$Logistic \ Regression$      & 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
 %$Random \ Forest$            & 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
 %$Gradient \ Tree \ Boosting$ & 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
