--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -26,8 +26,11 @@
 \usepackage{amsfonts}
 \usepackage[authoryear,round]{natbib}
 \usepackage{epigraph}
+
 \setlength\epigraphwidth{8cm}
 \setlength\epigraphrule{0pt}
+
+\graphicspath{ {./figures/} }
 
 %---------------------------------------------------------+
 % Paquetes misceláneos de listas, set space, notas, etc   |
@@ -48,8 +51,8 @@
 % \usepackage{spreadtab}  % Spreadsheet features
 \usepackage{multirow}       % Allows table cells that span more than one row
 \usepackage{booktabs}       % Enhance quality of tables
-
-\graphicspath{ {./figures/} }
+% to build master table
+\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 
 \def\calE{\mathcal{E}}
 \def\calF{\mathcal{F}}
@@ -259,6 +262,312 @@
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Clasificacion Binaria Supervisada}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Objetivo Principal}
+		\centering
+
+		Sea $\textbf{X} \in \mathbb{R}^{n \times p}$ matriz aleatoria compuesta por muestras $\textbf{X}_i \in \mathbb{R}^{p}$\\
+		$\textbf{Y} \in \mathbb{R}^n$ es el vector aleatorio de salida \\
+		Se busca una función $f_\theta: \mathbb{R}^{p} \rightarrow  \mathbb{R}$ que optimice u ``aprenda''
+
+	\begin{align*}%\label{expectedPredictionError}
+		\begin{split}
+		\operatorname{argmin}_{\theta} \  EPE(\theta) = & \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,f_\theta(X))\right]  \\
+			= & \int L(y,f_\theta (x)) p(x,y) dx dy
+		\end{split}
+	\end{align*}
+
+	para generar \textit{predicciones} para cualquier muestra
+
+	\smallskip
+	$f_\theta$ es un clasificador o algoritmo indexado por $\theta \in \Theta$
+
+	\smallskip
+	$L: \mathbb{R}^{2} \rightarrow  \mathbb{R}_{\geq 0}$ se denomina la función de pérdida
+
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Consideraciones}
+
+	$f_\theta^*$ intenta aproximar la relacion desconocida entre $\textbf{X}$ y $\textbf{Y}$
+
+	\bigskip
+
+	$f(\cdot)$, $L(\cdot)$ y el espacio de busqueda $\Theta$ de los \textit{aproximantes} son predeterminados
+
+	\bigskip\
+	
+	Desconocemos $P(\textbf{X},\textbf{Y})$ pues nos basamos en datos finitos\\
+
+	$X = \trainsetn  \sqcup \testsetn $ con $\trainsetn$ conjunto de aprendizaje/entrenamiento
+
+	$$\testsetn$$ conjunto de aprendizaje
+
+	\bigskip\
+	En Clasificación: $y_i \in \{0,1\} \ \forall  i$ y $L(z,w) =  \mathbb{I}(z \neq w ) $
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Aproximaciones de $EPE$}
+
+Varios tipos de errores a minimizar en el aprendizaje con \textbf{finitos} datos observados
+    \begin{block}{Error de entrenamiento y de generalización}
+
+        $$  Err_{\trainsetn}(\theta) =
+        \Expect_{ \textbf{X}, \textbf{Y} } \left[ L(Y,f_{\theta}(X))  |  \trainsetn \right] \approx
+        \dfrac{1}{n} \sum_{i=1}^{n} \mathbb{I} \left(f_\theta (X_{i})\neq Y_{i} \right)  $$
+
+        $$Err_{\testsetn}(\theta) \approx
+        \dfrac{1}{n} \sum_{i=1}^{n} \mathbb{I} \left(f_\theta (\tilde{X_{i}})\neq \tilde{Y_{i}} \right)  $$
+
+	\end{block}
+
+	Un modelo se dice sobreajustado (``overfit'') cuando $\mid Err_{\testset}(\theta) - Err_{\trainset}(\theta)  \mid \ >> 0$
+
+	Para esto es importante controlar la \textbf{complejidad} del modelo
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{ Ajust Poly-M vs Ajuste Poly-2 }
+\center
+\includegraphics[width=0.9\textheight]{slides/wiki_overfit_complex_classifier_demo.png}
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Convergencia a $EPE$ en clasificadores binarios}
+Bajo ciertas condiciones sobre $\Theta$ tenemos
+	\begin{block}{Desigualdad de Vapnik–Chervonenkis}
+
+		\begin{align*}
+			\begin{split}
+				P\left(\sup_{\theta\in \Theta}\left|Err_{\trainsetn}(\theta)-EPE (\theta)\right|>\varepsilon \right) & \leq
+				8S (\Theta,n) e^{{-n \varepsilon^{2}/32}}\\
+				\Expect\left[\sup_{\theta \in \Theta}\left| Err_{\trainsetn}(\theta)-EPE (\theta)\right|\right] &
+				\leq 2\sqrt{\dfrac{\log S(\Theta,n)+\log2}{n}}
+			\end{split}
+		\end{align*}
+
+	\end{block}
+
+	Donde $S(\Theta)$ es el coeficiente de ``shattering'' de la clase
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Regresión Logística}
+% = \frac{P(x|C_1)p(C_1) }{P(x|C_1)p(C_1) + P(x|C_0)p(C_0)}
+Con $\sigma(z) = \frac{1}{1 + e^{-z}}$ y $logodds(x)$ como $\log \left(  \frac{ P(C_1 \mid x)}{P(C_0 \mid x ) } \right)$
+	\begin{block}{Idea}
+	\footnotesize
+	\begin{align*}
+	% 	% \begin{split}
+		% $$
+		P(C_1| X_i)  = \frac{1}{1 + \exp \left(- \log \left(  \frac{ P(X_i|C_1)p(C_1)}{P(X_i|C_0)p(C_0)} \right) \right)} = \sigma\left(logodds(X_i)\right)
+		% $$
+	% 	% \end{split}
+	\end{align*}
+
+	El modelo propone $\exists \theta \ t.q.$
+	$$logodds(X_i) = \sum_{j=1}^p \theta^j \ X_i^j  \ , \forall X_i \in X $$
+	$$Y_i \mid X_i \ \sim \operatorname{Bernoulli}(p_i)$$
+
+	\end{block}
+
+	\begin{block}{Función de pérdida (MLL)}
+		$$\operatorname{argmin}_{\theta} \ \sum_{i=1}^N \big(Y_i ( \theta \cdot X_i ) + \log(1 + e^{1- \theta \cdot X_i} ) \big) + \lambda { \| \theta \|_{2}}^2$$
+	\end{block}
+	% $\gamma$ es un hiperparámetro para la regularizacion del modelo
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Árbol de decisión}
+
+Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mathcal{T}_{iz}(d,j) = \{x \in \mathcal{T} \ / \ x^j \leq d \}$ y $\mathcal{T}_{de}(d,j)$
+
+	\begin{block}{Idea}
+		% $$$		
+		\begin{align*}
+			\min_{d, j} \big[ \min_{c_{iz} }  \frac{1}{N_{iz}}\sum_{x \in \mathcal{T}_{iz}(d,j) } Imp(y,c_{iz}) \ 
+			+  \min_{c_{de}}  \frac{1}{N_{de}}\sum_{x \in \mathcal{T}_{de}(d,j) } Imp(y,c_{de}) \big]
+		\end{align*}
+			donde $Imp$ es una función de \textit{impureza} 
+		% \begin{align*}
+		% asdf
+		% \end{align*}
+	\end{block}
+
+	\begin{block}{Función de pérdida}
+	\small
+	{
+	\center
+	$h_{\theta}(X_i) = \sum_{l=1}^L c_l I(X_i \in \mathcal{T}_l)$ \\
+	}
+ 	con $L$ el número de regiones. Aqui $\theta = \bigcup\limits_{l=1}^{L} (d_l,j_l)$
+
+	% \begin{align*}			
+	% 			% h_{\theta}(X_i) = \sum_{l=1}^L c_l I(X_i \in \mathcal{T}_l)
+	% 	\end{align*}
+
+	\end{block}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Árbol de ejemplo}
+		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight, 
+										trim = 0.2 80 0.2 0.2cm, left, clip = true]{decision_tree/full_tree_map.png}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Sobreajuste}
+\includegraphics[width=1\textheight]{figure-biasVariance/dtree_overfit_problem_2.png}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Clasificadores de Ensamble }
+	
+	Conjunto de pequeños arboles $\bigcup\limits_{m=1}^{M} h_{\theta_m}$)
+	
+	\begin{block}{Bosques Aleatorios} 
+		\begin{align*}
+			Y_i \approx f_{\theta}(X_i) = \dfrac{1}{M}\sum_{m=1}^M h_{\theta_m}(X_i) 
+		\end{align*}
+
+	\end{block}
+	$ h_{\theta_m}$
+
+	\begin{block}{``Gradient Tree Boosting''}
+	Mejora iterativa de la pérdida 
+		\begin{align*}
+			Y_i \approx f_{\theta}(X_i) = \dfrac{1}{M}\sum_{m=1}^M h_{\theta_m}(X_i) 
+		\end{align*}
+	\end{block}
+
+
+\end{frame}
+
+
+
+\begin{frame}{FOOOO}
+	Mejora iterativa de arboles $h_{\theta}$
+
+	\begin{block}{Idea} 
+		\begin{align*}
+			Y_i \approx f_{\theta}(X_i) = \dfrac{1}{M}\sum_{m=1}^M h_{\theta}(X_i) 
+		\end{align*}
+
+	\end{block}
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\begin{frame}{``Naive Bayes''}
+
+Suponemos una distribucion conocida para $p(\cdot)$
+	\begin{block}{Idea}
+		Asumir \textit{inocentemente}
+		$$p(X^j |X^1,\ldots,\overline{X^j},\ldots,X^p, C_k) \ = \ p(X^j | C_k) \ \forall k \in \{0,1\}$$
+	\end{block}
+
+	\begin{block}{Función de decision }
+
+		\begin{align*}
+			p(C_1) \propto f(X) = \hat{p}(C_{1}) \  \prod_{i=1}^{n} \hat{p}(X_{i}\mid C_{1}) 
+		\end{align*}
+
+		\begin{align*}
+			\hat{Y} \ = \ \mathbb{I}\left[  f(X)  >= \ \frac{1}{2} \right]
+		\end{align*}
+
+	\end{block}
+	% $\gamma$ es un hiperparámetro para la regularizacion del modelo
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Comparacion de Fronteras de Decision}
+		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight, 
+										trim = 0.2 0.2 0.2 0.2cm, left, clip = true]{slides/plot_classifier_comparison.png}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{$K$ - Validación cruzada}
+
+Optimizacion de configuraciones de hiperparámetros $\mathcal{A}$ via estimacion del $EPE$
+
+	\begin{block}{Idea}
+		Dado un $\alpha \in \mathcal{A}$, particionar las muestras en $K$ conjuntos al azar
+		\\
+		Entrenar $\hat{f}_{\alpha}^{-k}, \ k \in \{1, \ldots, K\}$
+		\\
+		donde cada clasificador $\hat{f}^{-k}$ aprende sin usar las muestras de la particion $k$
+		\\
+		Computar $CV(\alpha) = \frac{1}{n} \sum^n_{i=1} L\left( y_i, \hat{f}_{\alpha}^{-k_i}(x_i) \right)$
+	\end{block}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Metricas de clasificadores binarios}
+
+	\center
+	Conteo de las combinaciones de $\hat{Y}$ y $Y$
+
+		\begin{columns}
+			\begin{column}{0.55 \textwidth}
+			\small
+				\noindent
+				\renewcommand\arraystretch{1}
+				\setlength\tabcolsep{0pt}
+				\begin{tabular}{c >{\bfseries}r @{\hspace{0.7em}}c @{\hspace{0.4em}}c @{\hspace{0.7em}}l}
+				\multirow{10}{*}{\parbox{1.1cm}{\bfseries\raggedleft\ Valor real $y$}} &
+				& \multicolumn{2}{c}{\bfseries Valor predicho $\hat{y}$} & \\
+				& & \bfseries \^{P} \ $(0)$ & \bfseries \^{N} \ $(1)$  \\
+				& P \ $(0)$ & \MyBox{Verdadero}{Positivo (TP)} & \MyBox{Falso}{Negativo (FN)} & \\[2.4em]
+				& N \ $(1)$ & \MyBox{Falso}{Positivo (FP)} & \MyBox{Verdadero}{Negativo (TN)} & \\
+				%& total & P \ $(0)$ & &
+				\end{tabular}
+
+			\end{column}
+
+			\begin{column}{0.45 \textwidth}
+			\small
+				\begin{align*}
+					\begin{split}
+						& Accuracy \ =\ \frac{ TP + TN }{ TP + TN + FP + FN }\\
+						& Precision \ =\ \frac{ TP }{TP + FN}\\
+						 & Recall \  =\ \frac{TP }{TP + FP}\\
+					  	& F1 = \mbox{media armónica de} Precision \mbox{y} Recall \\
+					  	& Curva \ ROC: \\
+					  	& \sigma(\pi) = (Recall(\pi), FPR(\pi)) \ t.q. \ \pi \in (0,1)
+					\end{split}
+				\end{align*}
+			\end{column}
+		\end{columns}
+
+	% \end{block}
+\end{frame}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{ Descripción de los datos}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -349,11 +658,11 @@ Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
 \begin{frame}{Agregación a nivel de antenas}
 
 	%\pause\
-	\begin{block}{Usuarios  o llamados vulnerables}
+	\begin{block}{Usuarios o llamados vulnerables}
 	Para un mes dado y una antena $a$ tendremos la tupla $\left< N_a, V_a, C_a, VC_a \right>$ donde
 		\begin{itemize}
-			\item El numero total de usuarios residentes $N_a$
-			\item El numero total de residentes vulnerables $V_a$
+			\item El número total de usuarios residentes $N_a$
+			\item El número total de residentes vulnerables $V_a$
 			\item El volumen total de llamados salientes $C_a$
 			\item El volumen de llamados salientes en una interacción \textit{vulnerable} $VC_a$
 		\end{itemize}
@@ -485,312 +794,6 @@ Para los dos países tenemos más de cuatro mil antenas celulares geolocalizadas
 \end{frame}
 
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Clasificacion Binaria Supervisada}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Objetivo Principal}
-		\centering
-
-		Sea $\textbf{X} \in \mathbb{R}^{n \times p}$ matriz aleatoria compuesta por muestras $\textbf{X}_i \in \mathbb{R}^{p}$\\
-		$\textbf{Y} \in \mathbb{R}^n$ es el vector aleatorio de salida \\
-		Se busca una función $f_\theta: \mathbb{R}^{p} \rightarrow  \mathbb{R}$ que optimice u ``aprenda''
-
-	\begin{align*}%\label{expectedPredictionError}
-		\begin{split}
-		\operatorname{argmin}_{\theta} \  EPE(\theta) = & \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,f_\theta(X))\right]  \\
-			= & \int L(y,f_\theta (x)) p(x,y) dx dy
-		\end{split}
-	\end{align*}
-
-	para generar \textit{predicciones} para cualquier muestra
-
-	\smallskip
-	$f_\theta$ es un clasificador o algoritmo indexado por $\theta \in \Theta$
-
-	\smallskip
-	$L: \mathbb{R}^{2} \rightarrow  \mathbb{R}_{\geq 0}$ se denomina la función de pérdida
-
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Consideraciones}
-
-	$f_\theta^*$ intenta aproximar la relacion desconocida entre $\textbf{X}$ y $\textbf{Y}$
-
-	\bigskip
-
-	$f(\cdot)$, $L(\cdot)$ y el espacio de busqueda $\Theta$ de los \textit{aproximantes} son predeterminados
-
-	\bigskip\
-	
-	Desconocemos $P(\textbf{X},\textbf{Y})$ pues nos basamos en datos finitos\\
-
-	$X = \trainsetn  \sqcup \testsetn $ con $\trainsetn$ conjunto de aprendizaje/entrenamiento
-
-	$$\testsetn$$ conjunto de aprendizaje
-
-	\bigskip\
-	En Clasificación: $y_i \in \{0,1\} \ \forall  i$ y $L(z,w) =  \mathbb{I}(z \neq w ) $
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Aproximaciones de $EPE$}
-
-Varios tipos de errores a minimizar en el aprendizaje con \textbf{finitos} datos observados
-    \begin{block}{Error de entrenamiento y de generalización}
-
-        $$  Err_{\trainsetn}(\theta) =
-        \Expect_{ \textbf{X}, \textbf{Y} } \left[ L(Y,f_{\theta}(X))  |  \trainsetn \right] \approx
-        \dfrac{1}{n} \sum_{i=1}^{n} \mathbb{I} \left(f_\theta (X_{i})\neq Y_{i} \right)  $$
-
-        $$Err_{\testsetn}(\theta) \approx
-        \dfrac{1}{n} \sum_{i=1}^{n} \mathbb{I} \left(f_\theta (\tilde{X_{i}})\neq \tilde{Y_{i}} \right)  $$
-
-	\end{block}
-
-	Un modelo se dice sobreajustado (``overfit'') cuando $\mid Err_{\testset}(\theta) - Err_{\trainset}(\theta)  \mid \ >> 0$
-
-	Para esto es importante controlar la \textbf{complejidad} del modelo
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{ Ajust Poly-M vs Ajuste Poly-2 }
-\center
-\includegraphics[width=0.9\textheight]{slides/wiki_overfit_complex_classifier_demo.png}
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Convergencia a $EPE$ en clasificadores binarios}
-Bajo ciertas condiciones sobre $\Theta$ tenemos
-	\begin{block}{Desigualdad de Vapnik–Chervonenkis}
-
-		\begin{align*}
-			\begin{split}
-				P\left(\sup_{\theta\in \Theta}\left|Err_{\trainsetn}(\theta)-EPE (\theta)\right|>\varepsilon \right) & \leq
-				8S (\Theta,n) e^{{-n \varepsilon^{2}/32}}\\
-				\Expect\left[\sup_{\theta \in \Theta}\left| Err_{\trainsetn}(\theta)-EPE (\theta)\right|\right] &
-				\leq 2\sqrt{\dfrac{\log S(\Theta,n)+\log2}{n}}
-			\end{split}
-		\end{align*}
-
-	\end{block}
-
-	Donde $S(\Theta)$ es el coeficiente de ``shattering'' de la clase
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Regresión Logística}
-% = \frac{P(x|C_1)p(C_1) }{P(x|C_1)p(C_1) + P(x|C_0)p(C_0)}
-Con $\sigma(z) = \frac{1}{1 + e^{-z}}$ y $logodds(x)$ como $\log \left(  \frac{ P(C_1 \mid x)}{P(C_0 \mid x ) } \right)$
-	\begin{block}{Idea}
-	\footnotesize
-	\begin{align*}
-	% 	% \begin{split}
-		% $$
-		P(C_1| X_i)  = \frac{1}{1 + \exp \left(- \log \left(  \frac{ P(X_i|C_1)p(C_1)}{P(X_i|C_0)p(C_0)} \right) \right)} = \sigma\left(logodds(X_i)\right)
-		% $$
-	% 	% \end{split}
-	\end{align*}
-
-	El modelo propone $\exists \theta \ t.q.$
-	$$logodds(X_i) = \sum_{j=1}^p \theta^j \ X_i^j  \ , \forall X_i \in X $$
-	$$Y_i \mid X_i \ \sim \operatorname{Bernoulli}(p_i)$$
-
-	\end{block}
-
-	\begin{block}{Función de pérdida (MLL)}
-		$$\operatorname{argmin}_{\theta} \ \sum_{i=1}^N \big(Y_i ( \theta \cdot X_i ) + \log(1 + e^{1- \theta \cdot X_i} ) \big) + \lambda { \| \theta \|_{2}}^2$$
-	\end{block}
-	% $\gamma$ es un hiperparametro para la regularizacion del modelo
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Árbol de decisión}
-
-Algoritmo recursivo y aleatorio que particiona el espacio en forma binaria $\mathcal{T}_{iz}(d,j) = \{x \in \mathcal{T} \ / \ x^j \leq d \}$ y $\mathcal{T}_{de}(d,j)$
-
-	\begin{block}{Idea}
-		% $$$		
-		\begin{align*}
-			\min_{d, j} \big[ \min_{c_{iz} }  \frac{1}{N_{iz}}\sum_{x \in \mathcal{T}_{iz}(d,j) } Imp(y,c_{iz}) \ 
-			+  \min_{c_{de}}  \frac{1}{N_{de}}\sum_{x \in \mathcal{T}_{de}(d,j) } Imp(y,c_{de}) \big]
-		\end{align*}
-			donde $Imp$ es una funcion de \textit{impureza} 
-		% \begin{align*}
-		% asdf
-		% \end{align*}
-	\end{block}
-
-	\begin{block}{Función de pérdida}
-	\small
-	{
-	\center
-	$h_{\theta}(X_i) = \sum_{l=1}^L c_l I(X_i \in \mathcal{T}_l)$ \\
-	}
- 	con $L$ el numero de regiones. Aqui $\theta = \bigcup\limits_{l=1}^{L} (d_l,j_l)$
-
-	% \begin{align*}			
-	% 			% h_{\theta}(X_i) = \sum_{l=1}^L c_l I(X_i \in \mathcal{T}_l)
-	% 	\end{align*}
-
-	\end{block}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Árbol de ejemplo}
-		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight, 
-										trim = 0.2 80 0.2 0.2cm, left, clip = true]{decision_tree/full_tree_map.png}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Sobreajuste}
-\includegraphics[width=1\textheight]{figure-biasVariance/dtree_overfit_problem_2.png}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Clasificadores de Ensamble }
-	
-	Conjunto de pequeños arboles $ \bigcup\limits_{m=1}^{M} h_{\theta_m}$) 
-	
-	\begin{block}{Bosques Aleatorios} 
-		\begin{align*}
-			Y_i \approx f_{\theta}(X_i) = \dfrac{1}{M}\sum_{m=1}^M h_{\theta_m}(X_i) 
-		\end{align*}
-	\end{block}
-
-	\begin{block}{``Gradient Tree Boosting''}
-	Mejora iterativa de la pérdida 
-		\begin{align*}
-			Y_i \approx f_{\theta}(X_i) = \dfrac{1}{M}\sum_{m=1}^M h_{\theta_m}(X_i) 
-		\end{align*}
-	\end{block}
-
-
-\end{frame}
-
-
-
-\begin{frame}{}
-	Mejora iterativa de arboles $h_{\theta}$
-
-	\begin{block}{Idea} 
-		\begin{align*}
-			Y_i \approx f_{\theta}(X_i) = \dfrac{1}{M}\sum_{m=1}^M h_{\theta}(X_i) 
-		\end{align*}
-
-	\end{block}
-
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\begin{frame}{``Naive Bayes''}
-
-Suponemos una distribucion conocida para $p(\cdot)$
-	\begin{block}{Idea}
-		Asumir \textit{inocentemente}
-		$$p(X^j |X^1,\ldots,\overline{X^j},\ldots,X^p, C_k) \ = \ p(X^j | C_k) \ \forall k \in \{0,1\}$$
-	\end{block}
-
-	\begin{block}{Funcion de decision }
-
-		\begin{align*}
-			p(C_1) \propto f(X) = \hat{p}(C_{1}) \  \prod_{i=1}^{n} \hat{p}(X_{i}\mid C_{1}) 
-		\end{align*}
-
-		\begin{align*}
-			\hat{Y} \ = \ \mathbb{I}\left[  f(X)  >= \ \frac{1}{2} \right]
-		\end{align*}
-
-	\end{block}
-	% $\gamma$ es un hiperparametro para la regularizacion del modelo
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Comparacion de Fronteras de Decision}
-		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight, 
-										trim = 0.2 0.2 0.2 0.2cm, left, clip = true]{slides/plot_classifier_comparison.png}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{$K$ - Validación cruzada}
-
-Optimizacion de configuraciones de hiperparametros $\mathcal{A}$ via estimacion del $EPE$
-
-	\begin{block}{Idea}
-		Dado un $\alpha \in \mathcal{A}$, particionar las muestras en $K$ conjuntos al azar
-		\\
-		Entrenar $\hat{f}_{\alpha}^{-k}, \ k \in \{1, \ldots, K\}$
-		\\
-		donde cada clasificador $\hat{f}^{-k}$ aprende sin usar las muestras de la particion $k$
-		\\
-		Computar $CV(\alpha) = \frac{1}{n} \sum^n_{i=1} L\left( y_i, \hat{f}_{\alpha}^{-k_i}(x_i) \right)$
-	\end{block}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\begin{frame}{Metricas de clasificadores binarios}
-
-	\center
-	Conteo de las combinaciones de $\hat{Y}$ y $Y$
-
-		\begin{columns}
-			\begin{column}{0.55 \textwidth}
-			\small
-				\noindent
-				\renewcommand\arraystretch{1}
-				\setlength\tabcolsep{0pt}
-				\begin{tabular}{c >{\bfseries}r @{\hspace{0.7em}}c @{\hspace{0.4em}}c @{\hspace{0.7em}}l}
-				\multirow{10}{*}{\parbox{1.1cm}{\bfseries\raggedleft\ Valor real $y$}} &
-				& \multicolumn{2}{c}{\bfseries Valor predicho $\hat{y}$} & \\
-				& & \bfseries \^{P} \ $(0)$ & \bfseries \^{N} \ $(1)$  \\
-				& P \ $(0)$ & \MyBox{Verdadero}{Positivo (TP)} & \MyBox{Falso}{Negativo (FN)} & \\[2.4em]
-				& N \ $(1)$ & \MyBox{Falso}{Positivo (FP)} & \MyBox{Verdadero}{Negativo (TN)} & \\
-				%& total & P \ $(0)$ & &
-				\end{tabular}
-
-			\end{column}
-
-			\begin{column}{0.45 \textwidth}
-			\small
-				\begin{align*}
-					\begin{split}
-						& Accuracy \ =\ \frac{ TP + TN }{ TP + TN + FP + FN }\\
-						& Precision \ =\ \frac{ TP }{TP + FN}\\
-						 & Recall \  =\ \frac{TP }{TP + FP}\\
-					  	& F1 = \mbox{media armónica de} Precision \mbox{y} Recall \\
-					  	& Curva \ ROC: \\
-					  	& \sigma(\pi) = (Recall(\pi), FPR(\pi)) \ t.q. \ \pi \in (0,1)
-					\end{split}
-				\end{align*}
-			\end{column}
-		\end{columns}
-
-	% \end{block}
-\end{frame}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Definición de problemas de migracion A}
@@ -860,7 +863,7 @@ Dado $(X,Y)$ y un clasificador $f_\theta \ t.q. \ \theta \in \Theta$
 		% \item a
 		% \item b
 		\item Preprocesar $X$ y separar en $\trainset$ + $\testset$
-		\item Cross validar hiperparametros de $f$ c/ $\trainset$
+		\item Cross validar hiperparámetros de $f$ c/ $\trainset$
 		\item Aprender $f_\theta^*$ c/ $\trainset$
 		\item Comparar  $Err_{\testset}(\theta^*)$ y  $Err_{\trainset}(\theta^*)$ en las métricas
 		\item Evaluar mejoras en complejidad, varianza e iterar en (I)
@@ -924,28 +927,93 @@ Un ejemplo de dos atributos de $X$ procesdos a partir del grafo de comunicacione
 \end{frame}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Resumen de Experimentos}
-
-			abd
-			\medskip
-
-			defgb
-
-%		\end{block}
-%		\begin{block}{Scores}
-%		\end{block}
-%
-\end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Resultados y Conclusiones}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Resultados:
+\begin{frame}{Tabla de Experimentos A}
+
+	\begin{table}[htp]\centering
+	\footnotesize
+		%\hskip-4.0cm
+		\ra{1.3}
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
+			&  \multicolumn{4}{c}{Problem 1} \\
+			\cmidrule{2-5}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
+			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96\\
+			$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 \\
+			$Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41  \\
+			$Naive \ Bayes$               & 0.84  & 0.82  & 0.75  & 2  \\
+
+			\bottomrule
+		\end{tabular}
+
+		%\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
+
+		% \medskip
+		%\hskip-4.0cm
+		\ra{1.3}
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
+			&  \multicolumn{4}{c}{Problem 2} \\
+			\cmidrule{2-5}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
+			$Logistic \ Regression$     & 0.714 & 0.726 & 0.248 & 119 \\
+			$Random \ Forest$            & 0.79  & 0.776 & 0.278 & 45  \\
+			$Gradient \ Tree \ Boosting$ & 0.838 & 0.819 & 0.291 & 54 \\
+			$Naive \ Bayes$               & 0.64  & 0.61  & 0.31  & 2   \\
+
+			\bottomrule
+		\end{tabular}
+	\end{table}
+
+\end{frame}
+
+
+
+
+\begin{frame}{Tabla de Experimentos B}
+
+	\begin{table}[htp]\centering
+	\footnotesize
+		\ra{1.3}
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
+			&  \multicolumn{4}{c}{Problem 3} \\
+			\cmidrule{2-5}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
+			$Logistic \ Regression$     & 0.705 & 0.754 & 0.307 & 115 \\
+			$Random \ Forest$            &  0.792 & 0.845 & 0.346 & 21 \\
+			$Gradient \ Tree \ Boosting$ & 0.811 & 0.855 & 0.359 & 33 \\
+			$Naive \ Bayes$               & 0.65  & 0.63  & 0.45  & 1  \\
+
+			\bottomrule
+		\end{tabular}
+		%\hskip-4.0cm
+		% \medskip
+		\ra{1.3}
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
+			&  \multicolumn{4}{c}{Problem 4} \\
+			\cmidrule{2-5}
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
+			$Logistic \ Regression$     & 0.883 & 0.85  & 0.331 & 106 \\
+			$Random \ Forest$            & 0.898 & 0.853 & 0.393 & 19 \\
+			$Gradient \ Tree \ Boosting$ & 0.885 & 0.873 & 0.384 & 47 \\
+			$Naive \ Bayes$               & 0.85  & 0.76  & 0.62 & 1 \\
+
+			\bottomrule
+		\end{tabular}
+	\end{table}
+
+\end{frame}
+
 
 
 \begin{frame}{Resultados 1}
