horrific mobilidad wording

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -862,7 +862,7 @@ Dado $(X,Y)$ y un clasificador $f_\theta \ t.q. \ \theta \in \Theta$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Atributos en los datos}
-	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la mobilidad endémica de este usuario
+	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la movilidad endémica de este usuario
 
 	\bigskip
 
@@ -874,7 +874,7 @@ Dado $(X,Y)$ y un clasificador $f_\theta \ t.q. \ \theta \in \Theta$
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Atributos en los datos 2}
-	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la mobilidad endémica de este usuario
+	Procesamos los CDRs de $T_1$ para generar un conjunto de entrenamiento $(X,Y)$ donde $X \in \mathbb{R}^{n \times p}$ es una matriz con un usuario por fila e $Y \in \mathbb{R}^n$ es el vector de respuesta para la movilidad endémica de este usuario
 
 	\bigskip
 
@@ -1094,7 +1094,7 @@ Heuristica para algoritmos de ensamble
 	Los tres tipos de atributos más relevantes para la clasificaición de los migrantes estaban relaciónadas con:
 
 	\begin{enumerate*}[label={\alph*)},]
-		\item la mobilidad del usuario
+		\item la movilidad del usuario
 		\item las interacciones y patrones de llamados con vecinos vulnerables, y
 		\item uso celular en los meses más cercanos a $T_0$, así como también la actividad en el mes de Diciembre.
 	\end{enumerate*}
