tilde in filename

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -426,7 +426,7 @@ Algoritmo recursivo y aleatorio que particióna el espacio en forma binaria $\ma
 
 \begin{frame}{Árbol de ejemplo}
 		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight,
-										trim = 0.2 80 0.2 0.2cm, left, clip = true]{decisión_tree/full_tree_map.png}
+										trim = 0.2 80 0.2 0.2cm, left, clip = true]{decision_tree/full_tree_map.png}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -440,7 +440,7 @@ Algoritmo recursivo y aleatorio que particióna el espacio en forma binaria $\ma
 
 \begin{frame}{Clasificadores de Ensamble }
 	
-	Conjunto de pequeños arboles $\bigcup\limits_{m=1}^{M} h_{\theta_m}$)
+	Sea $\bigcup\limits_{m=1}^{M} h_{\theta_m}$ un conjunto de pequeños arboles
 	
 	\begin{block}{Bosques Aleatorios} 
 		\begin{align*}
